test/cli/test-mutate/mutate-existing/mutated-secret.yaml
apiVersion: v1
data:
  foo: bar
kind: ConfigMap
metadata:
  name: dictionary-1
  namespace: staging
---
apiVersion: v1
kind: Secret
metadata:
  labels:
    foo: bar
  name: secret-1
  namespace: staging
