test/cli/test-mutate/mutate-existing/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test.yaml
policies:
- policy.yaml
resources:
- trigger-cm.yaml
results:
- kind: ""
  patchedResource: mutated-secret.yaml
  policy: mutate-existing-secret
  resources: []
  result: pass
  rule: mutate-secret-on-configmap-create
targetResources:
- raw-secret.yaml
